# vibe-link-backend

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_app.py
app/: __init__.py  main.py
app/api/routes/: poster.py
app/core/: config.py  security.py
app/schemas/: poster.py
app/services/: flux.py  gemini.py  groq.py  imgbb.py  overlay.py  qwen.py  screenshot.py
