[project]
name = "vibe-link-backend"
version = "1.0.0"
description = "AI-powered Website to Vibe Poster Generator"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "python-multipart==0.0.6",
    "pyppeteer==1.0.2",
    "google-generativeai==0.3.2",
    "huggingface-hub==0.20.3",
    "Pillow==10.2.0",
    "requests==2.31.0",
    "httpx==0.26.0",
    "python-dotenv==1.0.1",
    "aiofiles==23.2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
